# colors-of-noise-2d

./: .gitignore  README.md  colors_of_noise.py  pyproject.toml  requirements.txt
